--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+backend/.env
 
 ### STS ###
 .apt_generated
