--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.application.name=backend
-spring.data.mongodb.uri=mongodb+srv://krystianbeduch:nqGeO807PWrOblFj@memory-game.dtuib.mongodb.net/?retryWrites=true&w=majority&appName=memory-game
-spring.data.mongodb.database=memory-game
+# application.properties
+spring.application.name=memoryBackend
+spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.database=${MONGODB_DBNAME}
