--- a/tsconfig.json
+++ b/tsconfig.json
@@ -107,7 +107,8 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true,
-    "jsx": "react"
+    "jsx": "react",
+    "moduleResolution": "node",
     /* Skip type checking all .d.ts files. */
   }
 }
